<resources>
    <string name="app_name">Weatherion</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="country_name">Country: %s</string>
    <string name="city_name">City: %s</string>
    <string name="temperature">Temperature: %s C°</string>
    <string name="wind">Wind \n%s</string>
    <string name="humidity">Humidity \n%s</string>
    <string name="pressure">Pressure \n%s</string>
    <string name="cardview_date">Date: %s</string>
    <string name="cardview_time">Time: %s</string>
    <string name="cardview_temperature">%s C°</string>
    <string name="title_activity_forecast_detail">ForecastDetailActivity</string>
    <string name="title_activity_settings">Settings</string>

</resources>
