<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        >

        <TextView
            android:id="@+id/cardviewDateTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cardview_date"
            android:layout_marginRight="20dp"
            android:gravity="end|bottom"
            />

        <ImageView
            android:id="@+id/cardviewIconImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_02d"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/cardviewTemperatureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="#000"
            android:background="@drawable/temperature_card_text_view"
            android:shadowColor="#3F51B5"
            android:shadowRadius="5"
            android:text="@string/cardview_temperature"/>
        <TextView
            android:id="@+id/cardviewTimeTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cardview_time"
            android:gravity="start|top"
            android:layout_marginLeft="20dp"
            />
    </android.support.v7.widget.CardView>

</LinearLayout>